--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 This is an implementation of the header compression described in the
-"Header Delta-Compression for HTTP/2.0" internet draft.
+"Header Delta-Compression for HTTP/2.0" internet draft:
+http://datatracker.ietf.org/doc/draft-rpeon-httpbis-header-compression/
