--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 This is an implementation of the header compression described in the
 "Header Delta-Compression for HTTP/2.0" internet draft:
 http://datatracker.ietf.org/doc/draft-rpeon-httpbis-header-compression/
+
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+
